samples/_failures_safe/1761491990_243bee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e1c370d.c: In function ‘main’:
./samples/SAFE/__tmp_1e1c370d.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
